force-app/main/default/objects/Coupon_Item__c/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accessories</label>
    <type>Checkbox</type>
</CustomField>