force-app/main/default/objects/Coupon_Item__c/fields/Allow_to_keep_balance_amount__c.field-meta.xml
<CustomField>
    <fullName>Allow_to_keep_balance_amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow to keep balance amount</label>
    <type>Checkbox</type>
</CustomField>