force-app/main/default/objects/Coupon_Item__c/fields/Cash_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cash_Amount__c</fullName>
    <label>Cash Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>