force-app/main/default/objects/Coupon_Item__c/fields/Coupon_Image__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Image__c</fullName>
    <formula>IMAGE(  Coupon_Image_URL__c  , &apos;Coupon banner image&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Image</label>
    <type>Text</type>
</CustomField>