force-app/main/default/objects/Coupon_Item__c/fields/Coupon_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Image_URL__c</fullName>
    <label>Coupon Image URL</label>
    <type>Url</type>
</CustomField>