force-app/main/default/objects/Coupon_Item__c/fields/Coupon_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Item_Name__c</fullName>
    <label>Coupon Item Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>