force-app/main/default/objects/Coupon_Item__c/fields/Minimum_Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Purchase_Amount__c</fullName>
    <label>Minimum Purchase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>