force-app/main/default/objects/Coupon_Item__c/fields/One_off_Use__c.field-meta.xml
<CustomField>
    <fullName>One_off_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One-off Use</label>
    <type>Checkbox</type>
</CustomField>