force-app/main/default/objects/Coupon_Item__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <label>Parameters</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create - Current Date</fullName>
            </value>
            <value>
                <fullName>Enquiry - Coupon ID</fullName>
            </value>
            <value>
                <fullName>Enquiry - Current Date</fullName>
            </value>
            <value>
                <fullName>Transaction - Coupon ID</fullName>
            </value>
            <value>
                <fullName>Transaction - Current Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>