force-app/main/default/objects/Coupon_Item__c/fields/Set_use_of_Cash_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Set_use_of_Cash_Coupon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set use of Cash Coupon</label>
    <type>Checkbox</type>
</CustomField>