force-app/main/default/objects/Coupon_Item__c/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terms and Conditions</label>
    <referenceTo>Terms_and_Conditions__c</referenceTo>
    <relationshipLabel>Coupon Items</relationshipLabel>
    <relationshipName>Coupon_Items</relationshipName>
    <type>Lookup</type>
</CustomField>