force-app/main/default/objects/Coupon_Item__c/fields/Update_Coupon_Status_on_Redemption__c.field-meta.xml
<CustomField>
    <fullName>Update_Coupon_Status_on_Redemption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Coupon Status on Redemption</label>
    <type>Checkbox</type>
</CustomField>