force-app/main/default/objects/Coupon_Item__c/fields/Update_Customer_Id_on_Coupon_Creation__c.field-meta.xml
<CustomField>
    <fullName>Update_Customer_Id_on_Coupon_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Customer Id on Coupon Creation</label>
    <type>Checkbox</type>
</CustomField>