force-app/main/default/objects/Coupon_Item__c/fields/Update_Valid_From_on_Coupon_Creation__c.field-meta.xml
<CustomField>
    <fullName>Update_Valid_From_on_Coupon_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Valid From on Coupon Creation</label>
    <type>Checkbox</type>
</CustomField>