force-app/main/default/objects/Coupon_Item__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>