force-app/main/default/objects/Coupon_Item__c/fields/Valid_Length_in_days__c.field-meta.xml
<CustomField>
    <fullName>Valid_Length_in_days__c</fullName>
    <label>Valid Length (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>