force-app/main/default/objects/Coupon_Item__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <formula>Valid_Length_in_days__c  +  Valid_From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>