force-app/main/default/objects/Coupon_Item__c/fields/Validate_Customer__c.field-meta.xml
<CustomField>
    <fullName>Validate_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Customer</label>
    <type>Checkbox</type>
</CustomField>