force-app/main/default/objects/Coupon_Item__c/fields/Validate_Date__c.field-meta.xml
<CustomField>
    <fullName>Validate_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Date</label>
    <type>Checkbox</type>
</CustomField>