force-app/main/default/objects/Coupon_Item__c/fields/Validate_Status__c.field-meta.xml
<CustomField>
    <fullName>Validate_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Status</label>
    <type>Checkbox</type>
</CustomField>