force-app/main/default/objects/Coupon_Item__c/recordTypes/Discount_Rate.recordType-meta.xml
<RecordType>
    <fullName>Discount_Rate</fullName>
    <active>true</active>
    <description>Apply a discount rate (defined in coupon item) to current order when this coupon is presented.</description>
    <label>Discount Rate</label>
</RecordType>