force-app/main/default/objects/Coupon_Item__c/recordTypes/Eligibility_of_Charge_Class.recordType-meta.xml
<RecordType>
    <fullName>Eligibility_of_Charge_Class</fullName>
    <active>true</active>
    <description>Allow to purchase offer(s) / product(s) with specific charge class (defined in coupon item).</description>
    <label>Eligibility of Charge Class</label>
</RecordType>