force-app/main/default/objects/Coupon_Item__c/validationRules/Offer_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_Code_Validation</fullName>
    <active>true</active>
    <description>Offer Code Validation</description>
    <errorConditionFormula>ISBLANK(Offer_Code__c)</errorConditionFormula>
    <errorDisplayField>Offer_Code__c</errorDisplayField>
    <errorMessage>Please provide Offer Code</errorMessage>
</ValidationRule>