force-app/main/default/objects/Coupon_Item__c/validationRules/Valid_Length_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Length_Days</fullName>
    <active>true</active>
    <description>Validation Rule on Valid Length Days field</description>
    <errorConditionFormula>ISBLANK( Valid_Length_in_days__c )</errorConditionFormula>
    <errorDisplayField>Valid_Length_in_days__c</errorDisplayField>
    <errorMessage>Provide number of days</errorMessage>
</ValidationRule>